<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="45sp"
        android:layout_marginBottom="30sp">
        <TextView
            android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recieve_data"
            android:gravity="center"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/led_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:src="@drawable/alarm"
                android:background="@android:color/transparent"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"/>
            <ImageButton
                android:id="@+id/forward_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:src="@drawable/arrow_up"
                android:contentDescription="@string/forward"
                android:background="@android:color/transparent"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/vibe_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:src="@drawable/vibrate"
                android:background="@android:color/transparent"/>
            <ImageButton
                android:id="@+id/left_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/left"
                android:background="@android:color/transparent"/>
            <ImageButton
                android:id="@+id/stop_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:contentDescription="@string/stop"
                android:src="@drawable/stop"
                android:background="@android:color/transparent"/>
            <ImageButton
                android:id="@+id/right_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/right"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/gas_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:src="@drawable/gas"
                android:background="@android:color/transparent"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"/>
            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:src="@drawable/arrow_down"
                android:contentDescription="@string/back"
                android:background="@android:color/transparent"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>